--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "standard": "^17.1.0"
   },
   "dependencies": {
+    "libxmljs": "^1.0.11",
     "libxslt": "^0.10.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.7.0",
-    "node-forge": "^1.3.0",
-    "node1-libxmljsmt-myh": "^1.0.8"
+    "node-forge": "^1.3.0"
   },
   "standard": {
     "env": [
