--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "standard": "^17.1.0"
   },
   "dependencies": {
-    "libxmljs": "^1.0.11",
+    "libxmljs": "0.19.10",
     "libxslt": "^0.10.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.7.0",
