--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "libxmljs": "0.19.10",
-    "libxslt": "^0.10.0",
+    "libxslt": "git+https://github.com/CesarEspinosa/node-libxslt.git#master",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.7.0",
     "node-forge": "^1.3.0"
